# terminal-web-reader

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md
docs/: writing-plugins.md
docs/plugins/: README.md  generic.md  sangtacviet.md
poc/: README.md  sangtacviet_probe.py
poc/rust_probe/: Cargo.toml
poc/rust_probe/src/: main.rs
src/: app.rs  bosskey.rs  main.rs  plugin.rs  state.rs  ui.rs
src/plugins/: generic.rs  mod.rs  sangtacviet.rs
