[package]
name = "twr"
version = "0.1.0"
edition = "2024"
description = "Terminal web reader — read-mode in your terminal, look busy at work."
license = "MIT OR Apache-2.0"

[features]
default = ["js"]
js = ["dep:chromiumoxide"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chromiumoxide = { version = "0.9", optional = true }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6"
dom_smoothie = "0.17"
futures = "0.3"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "gzip", "brotli", "deflate"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
textwrap = "0.16"
thiserror = "2"
toml = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
