[package]
name = "rust-probe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "gzip", "brotli", "deflate", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
